--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,24 @@ Authors@R:
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: What license it uses
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/jooyoungseo/rmdplate
+BugReports: https://github.com/jooyoungseo/rmdplate/issues
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.0.2
+Imports: 
+    magrittr,
+    tibble,
+    rmarkdown,
+    bookdown,
+    pagedown,
+    dplyr,
+    utils,
+    usethis,
+    knitr,
+    tidyr,
+    xaringan,
+    fs,
+    lazyeval
